use origami service makefile and add whitesource config

--- a/circle.yml
+++ b/circle.yml
@@ -5,16 +5,15 @@ machine:
 
 dependencies:
   pre:
-    - npm prune --production=false && npm install --no-spin --no-progress
     - echo "//registry.npmjs.org/:_authToken=${NPM_AUTH_TOKEN}" > ${HOME}/.npmrc
 
 test:
   override:
-    - echo "Nothing to see here yet!"
+    - make ci
 
 deployment:
   release:
     tag: /v.*/
     owner: Financial-Times
     commands:
-      - npm-prepublish --verbose && npm publish --access public
+      - make npm-publish
